# aoratos

./: .gitignore  README.md  pyproject.toml
data/savepoints/: movies_metadata.parquet
docs/: strategy.md  supplement.md
scripts/: verify_data_build.py
src/aoratos/: __init__.py
src/aoratos/data/: README.md  __init__.py  builders.py  compress.py  constants.py  download.py  errors.py  parsers.py  paths.py  reader.py  savepoints.py  supplement.py
src/aoratos/models/: README.md  __init__.py  base.py  baseline.py  constants.py  errors.py  metrics.py  mf.py  preprocessing.py  types.py
tests/data/: conftest.py  test_build.py  test_builders.py  test_compress.py  test_data_integration.py  test_data_package.py  test_download.py  test_parsers.py  test_paths.py  test_reader.py  test_savepoints.py  test_supplement.py
tests/models/: test_base.py  test_baseline.py  test_metrics.py  test_mf.py  test_preprocessing.py
