[project]
name = "aoratos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "arslyte", email = "arslyte@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "kaggle>=2.0.0",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = ["pytest>=9.0.2"]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
